@@ -49,6 +49,7 @@ x added: `AUDIT(name, $, [type], message)` a method for audit logs
 x added: __obsolete__ message to older declaration of middleware, schemas and operations
 x added: `U.diffarr(prop, arr_A, arr_B)` for comparing of two arrays
 x added: `DIFFARR(prop, arr_A, arr_B)` is a global alias for `U.diffarr()`
+- added: `global.REQUIRE()` for local modules within app directory
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
